--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -47,7 +47,7 @@
 
 
 :root {
-  --ifm-font-family-base: "Sans";
+  --ifm-font-family-base: "Sans",system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
   --ifm-color-primary: #2e8555;
   --ifm-color-primary-dark: #29784c;
   --ifm-color-primary-darker: #277148;
