--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -48,13 +48,13 @@
 
 :root {
   --ifm-font-family-base: "Sans",system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #3c585f;
+  --ifm-color-primary-dark: #798485;
+  --ifm-color-primary-darker: #657679;
+  --ifm-color-primary-darkest: #51676c;
+  --ifm-color-primary-light: #b1ada8;
+  --ifm-color-primary-lighter: #c2bab3;
+  --ifm-color-primary-lightest: #e9d6cb;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
