--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -8,6 +8,27 @@
 
 
 @font-face {
+  font-family: "Soehne";
+  src: url("/font/soehne-web-buch.woff") format("woff");
+  display: swap;
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Soehne";
+  src: url("/font/soehne-web-halbfett.woff") format("woff");
+  display: swap;
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Soehne";
+  src: url("/font/Tobias-Light.woff") format("woff");
+  display: swap;
+  font-style: italic;
+}
+
+@font-face {
   font-family: "Sans";
   src: url("/font/UntitledSansWeb-Light.woff2") format("woff2");
   display: swap;
@@ -47,7 +68,7 @@
 
 
 :root {
-  --ifm-font-family-base: "Sans",system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  --ifm-font-family-base: "Soehne",system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
   --ifm-color-primary: #3c585f;
   --ifm-color-primary-dark: #798485;
   --ifm-color-primary-darker: #657679;
