--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -66,6 +66,9 @@
   font-style: normal;
 }
 
+.blockquote {
+  font-style: italic;
+}
 
 :root {
   --ifm-font-family-base: "Soehne",system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
