--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,14 +7,14 @@
 /* You can override the default Infima variables here. */
 
 @font-face {
-  font-family: "Serif";
+  font-family: "Heldane";
   src: url("/font/HeldaneTextWeb-Regular.woff2") format("woff2");
   display: swap;
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
-  font-family: "Serif";
+  font-family: "Heldane";
   src: url("/font/HeldaneTextWeb-RegularItalic.woff2") format("woff2");
   display: swap;
   font-weight: 400;
