increases blockquote size

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,21 +7,6 @@
 /* You can override the default Infima variables here. */
 
 @font-face {
-  font-family: "Heldane";
-  src: url("/font/HeldaneTextWeb-Regular.woff2") format("woff2");
-  display: swap;
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Heldane";
-  src: url("/font/HeldaneTextWeb-RegularItalic.woff2") format("woff2");
-  display: swap;
-  font-weight: 400;
-  font-style: italic;
-}
-
-@font-face {
   font-family: "Soehne";
   src: url("/font/soehne-web-buch.woff") format("woff");
   display: swap;
@@ -65,6 +50,7 @@ blockquote {
   --size-step-4: clamp(2.0625rem,1.15rem + 4.56vw,5rem);
   --size-step-5: clamp(2.5rem,1.08rem + 7.09vw,7.0625rem);
   --size-step-6: clamp(3rem,0.84rem + 10.78vw,9.9375rem);
+  --ifm-blockquote-font-size: var(--size-step-1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -85,4 +71,5 @@ blockquote {
   --size-step-4: clamp(2.0625rem,1.15rem + 4.56vw,5rem);
   --size-step-5: clamp(2.5rem,1.08rem + 7.09vw,7.0625rem);
   --size-step-6: clamp(3rem,0.84rem + 10.78vw,9.9375rem);
+  --ifm-blockquote-font-size: var(--size-step-1);
 }
