--- a/src/components/Hero1/index.module.css
+++ b/src/components/Hero1/index.module.css
@@ -8,8 +8,7 @@
   text-align: center;
   position: relative;
   overflow: hidden;
-  color: #f2f0f0;
-  background-image: url("C:/Users/Thomas/Desktop/asite/tinasaurus/static/img/Village-at-Night-1.webp");
+  background-image: url("C:/Users/Thomas/Desktop/asite/tinasaurus/static/img/docusaurus-plushie-banner.jpeg");
   background-size: cover; /* Adjust the sizing as needed */
   background-repeat: no-repeat; /* Adjust the repetition as needed */
 }
