--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -5,7 +5,7 @@
  */
 
 /* You can override the default Infima variables here. */
-:root {
+/* :root {
   --ifm-color-primary: #2e8555;
   --ifm-color-primary-dark: #29784c;
   --ifm-color-primary-darker: #277148;
@@ -15,10 +15,35 @@
   --ifm-color-primary-lightest: #3cad6e;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
-}
+} */
 
+  :root {
+    --ifm-color-primary: #e7b256;
+  --ifm-color-primary-dark: #e3a53a;
+  --ifm-color-primary-darker: #e19f2c;
+  --ifm-color-primary-darkest: #c2851c;
+  --ifm-color-primary-light: #ebbf72;
+  --ifm-color-primary-lighter: #edc580;
+  --ifm-color-primary-lightest: #f3d8a9;
+  }
+
+  html[data-theme='dark'] {
+    --ifm-background-color: #1e2125;
+    --ifm-background-surface-color: #121212;
+    --ifm-hero-text-color: #efeaea;
+  }
+
+ /*  [data-theme='dark'] {
+    --ifm-color-primary: #e7b256;
+    --ifm-color-primary-dark: #e3a53a;
+    --ifm-color-primary-darker: #e19f2c;
+    --ifm-color-primary-darkest: #c2851c;
+    --ifm-color-primary-light: #ebbf72;
+    --ifm-color-primary-lighter: #edc580;
+    --ifm-color-primary-lightest: #f3d8a9;
+  } */
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
+/* [data-theme='dark'] {
   --ifm-color-primary: #25c2a0;
   --ifm-color-primary-dark: #21af90;
   --ifm-color-primary-darker: #1fa588;
@@ -27,4 +52,109 @@
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+} */
+
+/* html[data-theme='dark'] {
+  --ifm-color-primary: #25c2a0;
+  --ifm-color-primary-dark: #21af90;
+  --ifm-color-primary-darker: #1fa588;
+  --ifm-color-primary-darkest: #1a8870;
+  --ifm-color-primary-light: #29d5b0;
+  --ifm-color-primary-lighter: #32d8b4;
+  --ifm-color-primary-lightest: #4fddbf;
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-hero-text-color: #ebe5e5;
+} */
+
+@media screen and (max-width: 996px) {
+  :root {
+    --ifm-font-size-base: 18px;
+  }
+  article header h1 {
+    font-size: 1.5rem !important;
+  }
+  .hero .hero__title {
+    font-size: 2.5rem;
+  }
 }
+
+@media screen and (min-width: 997px) {
+  :root {
+    --ifm-font-size-base: 17px;
+  }
+  article header h1 {
+    font-size: 2rem !important;
+  }
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+:root {
+  --ifm-font-family-base: 'Open Sans';
+}
+
+article {
+  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* Announcement Bar */
+div[class^='announcementBarContent'] {
+  background-color: var(--ifm-background-surface-color);
+  color: var(--ifm-font-color-base);
+}
+
+div[class^='announcementBarContent'] a {
+  color: var(--ifm-link-color);
+  text-decoration: inherit;
+}
+
+div[class^='announcementBarContent'] a:hover {
+  color: var(--ifm-link-color);
+  text-decoration: underline;
+}
+
+.navbar .navbar__items {
+  flex: auto;
+}
+
+.dropdown__link {
+  font-size: inherit;
+}
+
+/* Remove shadow on the left */
+:root {
+  --ifm-global-shadow-md: 0px;
+}
+
+/* Adjust footer link colors */
+#__docusaurus > footer > div > div.text--center > div > a {
+  color: unset;
+}
+
+#__docusaurus > footer > div > div.text--center > div > a:hover {
+  color: var(--ifm-link-color);
+  text-decoration: underline;
+}
+
+@media screen and (min-width: 997px) {
+  /* Show inline table of contents on mobile only */
+  div[class^='tableOfContentsInline'] {
+    display: none;
+  }
+}
+
+.footer.footer--dark {
+  --ifm-footer-background-color: #e7b256;
+  --ifm-footer-color: var(--ifm-footer-link-color);
+  --ifm-footer-link-color: var(--ifm-color-secondary);
+  --ifm-footer-title-color: var(--ifm-color-white);
+
+  background-color: var(--ifm-footer-background-color);
+  color: var(--ifm-footer-color)
+}
+
+
+
+
+
